<resources>
    <!--swertres(0-9 exact order, balik2)  6/58 6/55 6/49 6/45 6/42-->
    <string name="app_name">Earlotto</string>
    <string name="suetres">Suetres</string>
    <string name="lotto6_58">6/58</string>
    <string name="lotto6_55">6/55</string>
    <string name="lotto6_49">6/49</string>
    <string name="lotto6_45">6/45</string>
    <string name="lotto6_42">6/42</string>
    <string name="referesh">Generate</string>
</resources>
