<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jagbay.earlotto.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <!--swertres(0-9 exact order, balik2)  6/58 6/55 6/49 6/45 6/42-->
        <Button
            android:text="@string/suetres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_suetres"
            android:onClick="startSuetres"/>
        <Button
            android:text="@string/lotto6_58"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_6_58"
            android:onClick="startLotto658"/>
        <Button
            android:text="@string/lotto6_55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_6_55"
            android:onClick="startLotto655"/>
        <Button
            android:text="@string/lotto6_49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_6_49"
            android:onClick="startLotto649"/>
        <Button
            android:text="@string/lotto6_45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_6_45"
            android:onClick="startLotto645"/>
        <Button
            android:text="@string/lotto6_42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_6_42"
            android:onClick="startLotto642"/>

    </LinearLayout>

</RelativeLayout>
